k8s/application/o.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kluctl.io/deployment-item-dir: k8s/application/manifests
  labels:
    kluctl.io/discriminator: ci-cd-app-production
    kluctl.io/tag-0: manifests
    myKubernetes: myKubernetes
  name: my-kubernetes-application
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kluctl.io/deployment-item-dir: k8s/application/services/application/database/helm
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-kubernetes-database-production
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.4.1
    kluctl.io/discriminator: ci-cd-app-production
    kluctl.io/tag-0: database
    kluctl.io/tag-1: application
    kluctl.io/tag-2: services
    kluctl.io/tag-3: helm
    myKubernetes: myKubernetes
  name: database-postgresql
  namespace: my-kubernetes-application
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 5432
  podSelector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: my-kubernetes-database-production
      app.kubernetes.io/name: postgresql
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kluctl.io/deployment-item-dir: k8s/application/services/application/database/helm
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-kubernetes-database-production
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.4.1
    kluctl.io/discriminator: ci-cd-app-production
    kluctl.io/tag-0: database
    kluctl.io/tag-1: application
    kluctl.io/tag-2: services
    kluctl.io/tag-3: helm
    myKubernetes: myKubernetes
  name: database-postgresql-hl
  namespace: my-kubernetes-application
spec:
  clusterIP: None
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: tcp-postgresql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-kubernetes-database-production
    app.kubernetes.io/name: postgresql
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kluctl.io/deployment-item-dir: k8s/application/services/application/database/helm
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-kubernetes-database-production
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.4.1
    kluctl.io/discriminator: ci-cd-app-production
    kluctl.io/tag-0: database
    kluctl.io/tag-1: application
    kluctl.io/tag-2: services
    kluctl.io/tag-3: helm
    myKubernetes: myKubernetes
  name: database-postgresql
  namespace: my-kubernetes-application
spec:
  ports:
  - name: tcp-postgresql
    nodePort: null
    port: 5432
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-kubernetes-database-production
    app.kubernetes.io/name: postgresql
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kluctl.io/deployment-item-dir: k8s/application/services/application/database/helm
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-kubernetes-database-production
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.4.1
    kluctl.io/discriminator: ci-cd-app-production
    kluctl.io/tag-0: database
    kluctl.io/tag-1: application
    kluctl.io/tag-2: services
    kluctl.io/tag-3: helm
    myKubernetes: myKubernetes
  name: database-postgresql
  namespace: my-kubernetes-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: my-kubernetes-database-production
      app.kubernetes.io/name: postgresql
  serviceName: database-postgresql-hl
  template:
    metadata:
      labels:
        app: database
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: my-kubernetes-database-production
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 16.3.0
        helm.sh/chart: postgresql-15.4.1
      name: database-postgresql
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: primary
                  app.kubernetes.io/instance: my-kubernetes-database-production
                  app.kubernetes.io/name: postgresql
              topologyKey: kubernetes.io/hostname
            weight: 1
      automountServiceAccountToken: false
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: POSTGRESQL_PORT_NUMBER
          value: "5432"
        - name: POSTGRESQL_VOLUME_DIR
          value: /bitnami/postgresql
        - name: PGDATA
          value: /bitnami/postgresql/data
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: postgres-password
              name: database-postgresql
        - name: POSTGRESQL_ENABLE_LDAP
          value: "no"
        - name: POSTGRESQL_ENABLE_TLS
          value: "no"
        - name: POSTGRESQL_LOG_HOSTNAME
          value: "false"
        - name: POSTGRESQL_LOG_CONNECTIONS
          value: "false"
        - name: POSTGRESQL_LOG_DISCONNECTIONS
          value: "false"
        - name: POSTGRESQL_PGAUDIT_LOG_CATALOG
          value: "off"
        - name: POSTGRESQL_CLIENT_MIN_MESSAGES
          value: error
        - name: POSTGRESQL_SHARED_PRELOAD_LIBRARIES
          value: pgaudit
        image: docker.io/bitnamilegacy/postgresql:16.3.0-debian-12-r9
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: postgresql
        ports:
        - containerPort: 5432
          name: tcp-postgresql
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - -e
            - |
              exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 150m
            ephemeral-storage: 1024Mi
            memory: 192Mi
          requests:
            cpu: 100m
            ephemeral-storage: 50Mi
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsNonRoot: true
          runAsUser: 1001
          seLinuxOptions: {}
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /tmp
          name: empty-dir
          subPath: tmp-dir
        - mountPath: /opt/bitnami/postgresql/conf
          name: empty-dir
          subPath: app-conf-dir
        - mountPath: /opt/bitnami/postgresql/tmp
          name: empty-dir
          subPath: app-tmp-dir
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /bitnami/postgresql
          name: data
      hostIPC: false
      hostNetwork: false
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: database-postgresql
      volumes:
      - emptyDir: {}
        name: empty-dir
      - emptyDir:
          medium: Memory
        name: dshm
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kluctl.io/deployment-item-dir: k8s/application/services/application/backend/helm
  labels:
    app: backend-service
    kluctl.io/discriminator: ci-cd-app-production
    kluctl.io/tag-0: backend
    kluctl.io/tag-1: application
    kluctl.io/tag-2: services
    kluctl.io/tag-3: helm
    myKubernetes: myKubernetes
  name: backend-service
  namespace: my-kubernetes-application
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: backend-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kluctl.io/deployment-item-dir: k8s/application/services/application/backend/helm
  labels:
    app: backend-deployment
    kluctl.io/discriminator: ci-cd-app-production
    kluctl.io/tag-0: backend
    kluctl.io/tag-1: application
    kluctl.io/tag-2: services
    kluctl.io/tag-3: helm
    myKubernetes: myKubernetes
  name: backend-deployment
  namespace: my-kubernetes-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-pod
  template:
    metadata:
      labels:
        app: backend-pod
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: database-secret
        - secretRef:
            name: secret-production
        image: kubernetes-yep-registry.duckdns.org/my-kubernetes/backend:prod:1
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 35
          periodSeconds: 15
          timeoutSeconds: 15
        name: backend-container
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 35
          periodSeconds: 15
          timeoutSeconds: 15
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 120Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
      imagePullSecrets:
      - name: harbor-secret
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kluctl.io/deployment-item-dir: k8s/application/services/application/frontend/helm
  labels:
    kluctl.io/discriminator: ci-cd-app-production
    kluctl.io/tag-0: frontend
    kluctl.io/tag-1: application
    kluctl.io/tag-2: services
    kluctl.io/tag-3: helm
    myKubernetes: myKubernetes
  name: frontend-service
  namespace: my-kubernetes-application
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kluctl.io/deployment-item-dir: k8s/application/services/application/frontend/helm
  labels:
    app: frontend-deployment
    kluctl.io/discriminator: ci-cd-app-production
    kluctl.io/tag-0: frontend
    kluctl.io/tag-1: application
    kluctl.io/tag-2: services
    kluctl.io/tag-3: helm
    myKubernetes: myKubernetes
  name: frontend-deployment
  namespace: my-kubernetes-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-pod
  template:
    metadata:
      labels:
        app: frontend-pod
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: frontend-configmap
        - secretRef:
            name: secret-production
        image: kubernetes-yep-registry.duckdns.org/my-kubernetes/frontend:prod:1
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 35
          periodSeconds: 15
          timeoutSeconds: 15
        name: frontend-container
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 35
          periodSeconds: 15
          timeoutSeconds: 15
        resources:
          limits:
            cpu: 150m
            memory: 80Mi
          requests:
            cpu: 50m
            memory: 30Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
      imagePullSecrets:
      - name: harbor-secret
      securityContext:
        seccompProfile:
          type: RuntimeDefault
